NEXT-12695 - Fixed offcanvas close button jumping

--- a/src/Storefront/Resources/app/storefront/src/scss/layout/_offcanvas-cart.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/layout/_offcanvas-cart.scss
@@ -11,6 +11,7 @@ Extends the basic offcanvas component with additional cart styles.
 
     .cart-item {
         padding: $spacer 0;
+        position: relative;
 
         &.is-empty {
             padding-top: 0;
@@ -76,7 +77,7 @@ Extends the basic offcanvas component with additional cart styles.
 
     .cart-item-remove {
         position: absolute;
-        right: 10px;
+        right: 0;
     }
 
     .cart-quantity-price {
